--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
 										</p>
 										<p class="mb-0">
 											<i class="fas fa-envelope"></i>
-											doccure@example.com
+											learn@khabaitech.com
 										</p>
 									</div>
 								</div>
