--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-		<title>Doccure</title>
+		<title>Doctor Khojo</title>
 		
 		<!-- Favicons -->
 		<link type="image/x-icon" href="assets/img/favicon.png" rel="icon">
@@ -50,14 +50,15 @@
 					<div class="main-menu-wrapper">
 						<div class="menu-header">
 							<a href="index.html" class="menu-logo">
-								<img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+								<!--<img src="assets/img/logo.png" class="img-fluid" alt="Logo">-->
+								<h2>Doctor Khojo</h2>
 							</a>
 							<a id="menu_close" class="menu-close" href="javascript:void(0);">
 								<i class="fas fa-times"></i>
 							</a>
 						</div>
 						<ul class="main-nav">
-							<li class="active">
+							<li class="active ml-3">
 								<a href="index.html">Home</a>
 							</li>
 
