--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
 							<div class="row">
 								<div class="col-md-6 col-lg-6">
 									<div class="copyright-text">
-										<p class="mb-0">&copy; 2020 Doccure. All rights reserved.</p>
+										<p class="mb-0"> Copyright &copy; <script>document.write(new Date().getFullYear());</script> Designer by <a href="http://khabaitech.com/" target="_blank" > Khabai Tech</a>.</p>
 									</div>
 								</div>
 								<div class="col-md-6 col-lg-6">
