--- a/doctors.html
+++ b/doctors.html
@@ -96,12 +96,12 @@
 								<a href="">Patients <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 									<li class="has-submenu">
-										<a href="#">Doctors</a>
+										<!--<a href="#">Doctors</a>
 										<ul class="submenu">
 											<li><a href="map-grid.html">Map Grid</a></li>
 											<li><a href="map-list.html">Map List</a></li>
 										</ul>
-									</li>
+									</li>-->
 									<li class="active"><a href="search.html">Search Doctor</a></li>
 									<li><a href="doctor-profile.html">Doctor Profile</a></li>
 									<li><a href="booking.html">Booking</a></li>
